Brief: levers A1–A3, the validated baseline and metric, lever B
Claude-Session: https://claude.ai/code/session_01AcZTGGbUsm2JbRhrZTeC4a